--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,6 @@
 
 @layer components {
   .toast {
-    @apply absolute w-24  px-4 py-2 rounded-sm;
+    @apply absolute w-64 px-4 py-4 rounded-sm top-2 left-[50%] translate-x-[-50%];
   }
 }
