--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,6 @@
 	}
 
 	.guess-letter {
-		@apply inline-block text-center text-2xl font-bold py-2 px-2 size-14 border-2 border-white;
+		@apply inline-block text-center text-2xl font-bold size-14 border-2 border-white;
 	}
 }
