--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,8 @@
 	.guess-letter {
 		@apply inline-block text-center text-2xl font-bold size-14;
 	}
+
+	.keyboard-letter {
+		@apply size-12 text-center bg-gray-300 hover:bg-gray-400 text-black font-bold py-2 px-4 rounded;
+	}
 }
